k8s/ingress/ingress.yaml

# nyati
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-suite
  labels:
    name: microservices-suite
spec:
  rules:
    - host: nyati.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: payment
                port:
                  number: 9002
